2004-12-14  Ethan Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in: Add rainbow.html and pointsize.html to the
	target list for "make html".

2004-12-10  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (update_command): Fixed handling of optional
	second filename argument broken during introduction of
	try_to_get_string().

2004-12-08  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/tgif.trm: Update option parsing to be order-independent.
	Add monochrome and linewidth options.

2004-12-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Implement term->set_color(), term->filled_polygon,
	and term->fillbox() for the emf terminal.  This does not provide PM3D
	palette support, but it does allow coloring by explicit RGB and plot 
	styles that use filled boxes.

2004-12-07  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/pm3d.dem: Turn on colorbox in the demo of corners2color, and
	position it at the bottom of the page.

2004-12-05  Ethan Merritt  <merritt@u.washington.edu>

	Run valgrind to find memory leaks.

	* term/x11.trm (X11_make_palette): Free palette gradient after sending
	it to gnuplot_x11.  Do other drivers have similar leaks?
	
	* src/set.c (set_cntrparam): Free old dynamic contour level array before
	getting a new one.
	
	* src/set.c (set_xyzlabel): Free dynamic label string after copying it
	to a static label structure.

	* src/parse.c (temp_at): Add a garbage-collection step to the 
	deallocation of temporary storage for expression evaluation. I wish I
	understood this well enough to guarantee the correctness of scavenging,
	but empirical tests indicate that no double-free errors are triggered.

2004-12-04  Ethan Merritt  <merritt@u.washington.edu>

	Run valgrind to find codepaths that trip over uninitialized variables.

	* src/parse.c (const_express) src/set.c (set_xyzlabel set_label):
	src/eval.c src/eval.h: Move set/clear of flag STRING_RESULT_ONLY up
	one level in the call chain.
